[package]
name = "serde_mlua"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = "1.0"
mlua = { version = "0.4", default-features = false, features = ["lua51"] }
